Added a few minor changes

--- a/chat-app/index.html
+++ b/chat-app/index.html
@@ -21,6 +21,7 @@
             <div class="left-column">
                 <div class="chat">chat</div>
                 <div class="chat-room">chat-room</div>
+                <div class="Personal">Personal</div>
                 <div class="sign-out">sign-out</div>
             </div>
             <div class="right">
