Added chat head column

--- a/chat-app/index.html
+++ b/chat-app/index.html
@@ -26,7 +26,15 @@
             </div>
             <div class="right">
                 <div class="mid-column">
-                        
+                    <div class="chat-search">Search chat</div>
+                    <div class="most-recent-chat">Chat head 1</div>
+                    <div class="chat-head">Chat head 2</div>
+                    <div class="chat-head">Chat head 3</div>
+                    <div class="chat-head">Chat head 4</div>
+                    <div class="chat-head">Chat head 5</div>
+                    <div class="chat-head">Chat head 6</div>
+                    <div class="chat-head">Chat head 7</div>
+                    <div class="chat-head">Chat head 8</div>
                 </div>
                 <div class="right-column">
 
