--- a/chat-app/login.html
+++ b/chat-app/login.html
@@ -7,7 +7,7 @@
 <body>
     <header class="details">
         <div class="signUp">
-            <button type="button">Not a member|Signup</button> 
+            Not a member? <button type="button">Signup</button> 
         </div>
     </header>
     <div class="right">
