--- a/chat-app/index.html
+++ b/chat-app/index.html
@@ -37,7 +37,13 @@
                     <div class="chat-head">Chat head 8</div>
                 </div>
                 <div class="right-column">
-
+                    <div class="recipient-profile">Recipeint's avi and name</div>
+                    <div class="Search">Search</div>
+                    <div class="Insert">Insert</div>
+                    <div class="Extra-features">Extras</div>
+                    <div class="Chatbox">Chatbox</div>
+                    <div class="Typebox">Typebox</div>
+                    <div class="Send-button">Send</div>
                 </div>
             </div>
         </div>
