--- a/chat-app/index.html
+++ b/chat-app/index.html
@@ -24,7 +24,6 @@
                 <div class="Personal">Personal</div>
                 <div class="sign-out">sign-out</div>
             </div>
-            <div class="right">
                 <div class="mid-column">
                     <div class="chat-search">Search chat</div>
                     <div class="most-recent-chat">Chat head 1</div>
@@ -37,15 +36,14 @@
                     <div class="chat-head">Chat head 8</div>
                 </div>
                 <div class="right-column">
-                    <div class="recipient-profile">Recipeint's avi and name</div>
-                    <div class="Search">Search</div>
-                    <div class="Insert">Insert</div>
-                    <div class="Extra-features">Extras</div>
+                    <div class="recipient-profile">Recipient's avi and name</div>
+                    <div class="Search"><button>Search</button></div>
+                    <div class="Insert"><button>Insert</button></div>
+                    <div class="Extra-features"><button>Extras</button></div>
                     <div class="Chatbox">Chatbox</div>
-                    <div class="Typebox">Typebox</div>
-                    <div class="Send-button">Send</div>
+                    <div class="Typebox">Type box</div>
+                    <div class="Send-button"><button>Send</button></div>
                 </div>
-            </div>
         </div>
     </body>
 </html>
